2008-04-14  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-parser.c (_syx_parser_parse_optimized_block): increase method temporary stack to hold optimized block temporaries

	* syx/syx-interp.c (_syx_interp_find_temporary): forgot to change the code when copied find_argument
	(_syx_interp_find_argument): fixed

	* syx/syx-interp.h (syx_interp_stack_peek): fix

	* syx/syx-parser.c (_syx_scope_free): added
	(syx_parser_free): fix leak
	Clear scope tops.

	* syx/syx-interp.h (struct SyxInterpFrame): removed ensure_block

	* st/kernel/Set.st: forgot header

	* syx/syx-interp.c (_syx_interp_find_temporary): added
	(_syx_interp_find_argument): added
	(_syx_interp_state_update): obtain syx_uint16 bytecodes
	(_syx_interp_frame_prepare_new): frame receiver not filled in
	(syx_interp_do_special): get ensure block from the context, if available

2008-04-13  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-error.c (syx_signal_does_not_understand): stop being a macro

	* tests/testparser.c (main): updated

	* syx/syx-parser.c: fix argument and temporary search

	* syx/syx-utils.c: more info on method lookup failure

	* syx/syx-interp.c (_syx_interp_switch_process): wrong way to get the process frame bottom
	(syx_interp_enter_context): be sure we have a frame
	(_syx_interp_frame_prepare_new): be aware of null frames and null stack pointers

	* syx/syx-enums.h: update VM-used variable names

	* st/kernel/initialDecl.st: variables have been updated to match interpreter implementation

	* syx/syx-primitives.c: incredibly cleaned up block messages

        Lots of changes to the interpreter and the parser.
        Arguments and temporaries of blocks won't be put into the same stack of the home method.
        Changed the way of dealing with contexts and processes.
        The interpreter won't create any context except the ones demanded outside of it.
        All contexts informations are now kept inside the process stack.

2008-02-20  Luca Bruno  <lethalman88@gmail.com>
